Fixed image stretch on homepage

--- a/css/style.scss
+++ b/css/style.scss
@@ -31,6 +31,10 @@ body {
   }
 }
 
+.image-fit{
+  object-fit: cover;
+}
+
 .content-container {
   min-height: 80vh;
 }
